<resources>
    <string name="app_name">Pokedex</string>
    <string name="et_hint_user">User</string>
    <string name="tv_user_greeting">%s you are using version 1 of POKEDEX</string>
    <string name="credits_description">Within POKEDEX you can find all pokemon information, how their type, weight, height, capture probability, etc…</string>
    <string name="btn_contact">Contact</string>
    <string name="user_info_text">User: %s</string>
    <string name="toast_empty_user_text">User is empty</string>
    <string name="mail_content">Message from %s</string>
    <string name="mail_subject">Application %s</string>
    <string name="pokedex_number_text">Nº%03d</string>
    <string name="detail_weight_text">Weight: %d</string>
    <string name="detail_height_text">Height: %d</string>
    <string name="detail_catch_probability">Catch probability: %d%%</string>
    <string name="details_evolutions_text">Evolutions</string>
    <string name="btn_menu_text">Menu</string>
    <string name="btn_logout">Logout</string>
    <string name="notice">Notice</string>
    <string name="title_login_fragment">Login</string>
    <string name="title_pokedex_fragment">Pokedex</string>
    <string name="title_user_info_fragment">User Info</string>
    <string name="title_favourites_fragment">Favourites</string>
    <string name="title_credits_fragment">Credits</string>
    <string name="title_detail_pokemon_fragment">Pokemon Details</string>
    <string name="title_detail_fav_pokemon_fragment">Favourite Pokemon Details</string>
</resources>