<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnLogOut"
        style="@style/menu_logout_btn_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toTopOf="@+id/menuGuideLineBottom"
        app:layout_constraintEnd_toStartOf="@+id/menuGuideLineRight"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/menuGuideLineLeft"
        app:layout_constraintTop_toBottomOf="@+id/btnCredits" />

    <Button
        android:id="@+id/btnCredits"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_credits_fragment"
        app:layout_constraintBottom_toTopOf="@+id/btnLogOut"
        app:layout_constraintEnd_toEndOf="@+id/btnUserInfo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnUserInfo"
        app:layout_constraintTop_toBottomOf="@+id/btnUserInfo" />

    <Button
        android:id="@+id/btnPokedex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_pokedex_fragment"
        app:layout_constraintBottom_toTopOf="@+id/btnFavourites"
        app:layout_constraintEnd_toEndOf="@+id/btnFavourites"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnFavourites"
        app:layout_constraintTop_toTopOf="@+id/menuGuideLineTop" />

    <Button
        android:id="@+id/btnFavourites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_favourites_fragment"
        app:layout_constraintBottom_toTopOf="@+id/btnUserInfo"
        app:layout_constraintEnd_toStartOf="@+id/menuGuideLineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/menuGuideLineLeft"
        app:layout_constraintTop_toBottomOf="@+id/btnPokedex" />

    <Button
        android:id="@+id/btnUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_user_info_fragment"
        app:layout_constraintBottom_toTopOf="@+id/btnCredits"
        app:layout_constraintEnd_toEndOf="@+id/btnFavourites"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnFavourites"
        app:layout_constraintTop_toBottomOf="@+id/btnFavourites" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menuGuideLineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/horizontal_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menuGuideLineRight"
        android:layout_width="@dimen/horizontal_margin"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/horizontal_margin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menuGuideLineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/vertical_margin"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/menuGuideLineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/vertical_margin"/>
</androidx.constraintlayout.widget.ConstraintLayout>